tests/04-multiple-of-8bits.stderr
error[E0277]: the trait bound `modular_bitfield::checks::SevenMod8: modular_bitfield::checks::TotalSizeIsMultipleOfEightBits` is not satisfied
  --> $DIR/04-multiple-of-8bits.rs:53:1
   |
53 | #[bitfield]
   | ^^^^^^^^^^^ the trait `modular_bitfield::checks::TotalSizeIsMultipleOfEightBits` is not implemented for `modular_bitfield::checks::SevenMod8`
   | 
  ::: $DIR/src/checks.rs:48:48
   |
48 |     <Self::Size as RenameSizeType>::CheckType: TotalSizeIsMultipleOfEightBits,
   |                                                ------------------------------ required by this bound in `modular_bitfield::checks::CheckTotalSizeMultipleOf8`
   |
   = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)

For more information about this error, try `rustc --explain E0277`.
error: could not compile `modular-bitfield-tests`.
